Cleaning up project structure and UI

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         p {
             font-size: 0.9em;
-            background: linear-gradient(17deg, #603915, #ec3eb5, #0041ff, #969300);
+            background: linear-gradient(17deg, #603915, #a50b0b, #0041ff, #080808);
             margin-bottom: 24px;
             background-size: 400% 400%;
             -webkit-background-clip: text;
@@ -158,8 +158,9 @@
     justify-items: center;">
         <img src="assets/gpt-rex.png" alt="GPT-Rex Logo" style="width: 150px; height: auto;" />
         <h1>GPT-Rex</h1>
-        <p>Advanced NLP + Prompt Engineering + Linear Algebra <br><br> > prototype < </p> 
     </div>
+    <p style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Advanced NLP + Prompt Engineering + Linear Algebra</p> 
+    <p style="font-size: smaller;"> > prototype < </p>
     <input type="text" id="searchQuery" placeholder="E.g., 'romantic comedy in Paris', 'nature documentaries '">
     <button onclick="searchMovies()">Search</button>
     <div id="results"></div>
