added llm annonation and a info panel to see prompt magic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #ff00eec2, #00c9cceb);
+            background: linear-gradient(to right, #6aa328, #cc00738a);
             text-align: -webkit-center;
             padding: 20px;
             overflow-x: hidden;
@@ -30,27 +30,23 @@
         }
 
         p {
-            font-size: 0.9em;
-            background: linear-gradient(17deg, #603915, #a50b0b, #0041ff, #080808);
-            margin-bottom: 24px;
-            background-size: 400% 400%;
+            background: linear-gradient(to right, #e20e4f 20%, #00c4fa 30%, #7f01cd 70%, #d40000 80%);
             -webkit-background-clip: text;
-            color: transparent;
-            animation: gradientShift 4s ease-in-out infinite;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-fill-color: transparent;
+            background-size: 500% auto;
             margin-top: 10px;
+            animation: textShine 5s ease-in-out infinite alternate;
         }
 
-        @keyframes gradientShift {
+        @keyframes textShine {
             0% {
                 background-position: 0% 50%;
             }
 
-            50% {
-                background-position: 100% 50%;
-            }
-
             100% {
-                background-position: 0% 50%;
+                background-position: 100% 50%;
             }
         }
 
@@ -135,11 +131,21 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
+        .highlight {
+            color: white;
+            background-color: black;
+            padding: 2px 5px;
+            text-align: left;
+            left: 0;
+            border-radius: 4px;
+        }
+
         .movie-card-back {
             background-color: antiquewhite;
             transform: rotateY(180deg);
             /* Flip the back card to face away initially */
             padding: 10px;
+            overflow-y: auto;
             box-sizing: border-box;
         }
 
@@ -151,83 +157,166 @@
 </head>
 
 <body>
-    <div class="header-container" style="width: 80%;
+    <div id="logPanel" style="    position: fixed;
+        top: 10px;
+        left: 10px;
+        text-wrap: wrap;
+        background: rgba(255, 255, 255, 0.8);
+        padding: 10px;
+        border-radius: 8px;
+        width: 300px;
+        height: 300px;
+        overflow-y: auto;
+        font-size: 14px;">
+        <strong>Processing Log:</strong>
+        <pre id="logContent" style="white-space: pre-wrap;"></pre>
+    </div>
+    <div class="header-container" style="width: 31%;
     border-radius: 64px;
     display: flow;
-    background: repeating-radial-gradient(#00000000, #f5f5f585 100px);
+    background: repeating-radial-gradient(#00000000, #f5f5f585 15px);
     justify-items: center;">
         <img src="assets/gpt-rex.png" alt="GPT-Rex Logo" style="width: 150px; height: auto;" />
         <h1>GPT-Rex</h1>
     </div>
-    <p style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Advanced NLP + Prompt Engineering + Linear Algebra</p> 
+    <p style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Advanced NLP + Prompt Engineering + Linear Algebra</p>
     <p style="font-size: smaller;"> > prototype < </p>
-    <input type="text" id="searchQuery" placeholder="E.g., 'romantic comedy in Paris', 'nature documentaries '">
-    <button onclick="searchMovies()">Search</button>
-    <div id="results"></div>
+            <input type="text" id="searchQuery" placeholder="E.g., 'romantic comedy in Paris', 'nature documentaries '">
+            <button onclick="searchMovies()">Search</button>
+            <div id="results"></div>
 
-    <script>
+            <script>
 
-        // Assume the text file is named 'queries.txt' and located in the 'assets' folder
-        const queriesFilePath = 'assets/queries.txt';
-        let queries = [];
-        let currentQueryIndex = 0;
+                // Assume the text file is named 'queries.txt' and located in the 'assets' folder
+                const queriesFilePath = 'assets/queries.txt';
+                let queries = [];
+                let currentQueryIndex = 0;
 
-        window.onload = async () => {
-            console.log('Loading queries...');
-            const response = await fetch(queriesFilePath);
-            const text = await response.text();
-            queries = text.split('\n'); // Assuming each query is on a new line
-        };
+                window.onload = async () => {
+                    console.log('Loading queries...');
+                    const response = await fetch(queriesFilePath);
+                    const text = await response.text();
+                    queries = text.split('\n'); // Assuming each query is on a new line
+                };
 
-        document.getElementById('searchQuery').addEventListener('keydown', (e) => {
-            if (e.key === 'ArrowUp') {
-                e.preventDefault(); // Prevent the default action of moving the cursor
-                currentQueryIndex = (currentQueryIndex - 1 + queries.length) % queries.length;
-                document.getElementById('searchQuery').value = queries[currentQueryIndex];
-            } else if (e.key === 'ArrowDown') {
-                e.preventDefault(); // Prevent the default action of moving the cursor
-                currentQueryIndex = (currentQueryIndex + 1) % queries.length;
-                document.getElementById('searchQuery').value = queries[currentQueryIndex];
-            } else if (e.key === 'Enter') {
-                e.preventDefault(); // Prevent the default action of submitting the form
-                searchMovies(); // Call your search function
-            }
-        });
-
-        async function searchMovies() {
-            try {
-                const query = document.getElementById('searchQuery').value;
-                const response = await fetch('http://localhost:8080/search', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ query: query })
+                document.getElementById('searchQuery').addEventListener('keydown', (e) => {
+                    if (e.key === 'ArrowUp') {
+                        e.preventDefault(); // Prevent the default action of moving the cursor
+                        currentQueryIndex = (currentQueryIndex - 1 + queries.length) % queries.length;
+                        document.getElementById('searchQuery').value = queries[currentQueryIndex];
+                    } else if (e.key === 'ArrowDown') {
+                        e.preventDefault(); // Prevent the default action of moving the cursor
+                        currentQueryIndex = (currentQueryIndex + 1) % queries.length;
+                        document.getElementById('searchQuery').value = queries[currentQueryIndex];
+                    } else if (e.key === 'Enter') {
+                        e.preventDefault(); // Prevent the default action of submitting the form
+                        searchMovies(); // Call your search function
+                    }
                 });
 
-                if (!response.ok) {
-                    throw new Error(`HTTP error! Status: ${response.status}`);
+
+                async function extractFeaturesFromPrompt(prompt) {
+
+                    updateLog('User Prompt Received: ', true); // Highlight this part
+                    updateLog(prompt); // Normal text for prompt
+                    updateLog('Standardizing Prompt ...', true);
+
+                    const systemInstruction = `
+                    As a cutting-edge feature extraction assistant, your task is to meticulously analyze the user's input and distill the key elements that are crucial for our movie recommendation algorithm. Approach each prompt with the goal of uncovering the underlying aspects that define the user's preferences and cinematic desires. Extract these features methodically, presenting them as a streamlined, comma-separated list, devoid of categorical labels for simplicity. Focus on aspects explicitly stated or implicitly suggested in the user's prompt. For example:
+                        User Input: 'I'm looking for a mystery film set in a small town with a focus on family secrets and local folklore.'
+                        Extracted Features: Family secrets, Local folklore, Small town, Mystery drama, Uncovering hidden truths, Intriguing, Contemplative, Suspenseful, Scenic landscapes, Small-town imagery
+                    Only include elements that are pertinent to the user's request. Disregard any category not relevant or mentioned. Your role is to ensure that the essence of the user's query is captured accurately, enabling us to deliver the most tailored and precise movie recommendations.
+
+                    If a category is not relevant or mentioned, it should not be included in the response.
+                    `;
+
+                    const data = {
+                        prompt: "\n\nUser Input: '" + prompt + "'",
+                        temperature: 0.20,
+                        system_prompt: {
+                            prompt: systemInstruction
+                        }
+                    };
+
+                    try {
+                        const response = await fetch('http://localhost:8080/completion', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json'
+                            },
+                            body: JSON.stringify(data)
+                        });
+
+                        if (!response.ok) {
+                            throw new Error(`HTTP error! Status: ${response.status}`);
+                        }
+
+                        const result = await response.json();
+                        console.log('Result: ', result.content);
+                        updateLog(`Prompt Standardized: `, true); // Highlight this line
+                        updateLog(result.content); // Do not highlight the actual content
+                        return result.content;
+                    } catch (error) {
+                        console.error('Error extracting features:', error);
+                        updateLog('Error in standardizing prompt');
+                        return null;
+                    }
                 }
 
-                const movies = await response.json();
-                displayResults(movies);
-            } catch (error) {
-                console.error('Fetch error:', error);
-            }
-        }
+                async function searchMovies() {
+                    try {
+                        const query = document.getElementById('searchQuery').value;
+                        const extractedFeatures = await extractFeaturesFromPrompt(query);
+
+                        const response = await fetch('http://localhost:8081/search', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json'
+                            },
+                            body: JSON.stringify({ query: extractedFeatures })
+                        });
+
+                        if (!response.ok) {
+                            throw new Error(`HTTP error! Status: ${response.status}`);
+                        }
+
+                        const movies = await response.json();
+                        displayResults(movies);
+                    } catch (error) {
+                        console.error('Fetch error:', error);
+                    }
+                }
+
+                function updateLog(message, isHighlight = false) {
+                    const logPanel = document.getElementById('logContent');
+
+                    if (isHighlight) {
+                        // Create and append highlighted text
+                        const highlightElement = document.createElement('span');
+                        highlightElement.classList.add('highlight');
+                        highlightElement.textContent = message;
+                        logPanel.appendChild(highlightElement);
+                    } else {
+                        // For non-highlighted content, append a line break and then the text content
+                        logPanel.appendChild(document.createElement('br')); // Add line break before non-highlighted text
+                        logPanel.appendChild(document.createTextNode(message));
+                    }
+
+                    logPanel.appendChild(document.createElement('br')); // Add line break after the text
+                }
 
 
-        function displayResults(movies) {
-            // Updated displayResults function...
-            const resultsContainer = document.getElementById('results');
-            resultsContainer.innerHTML = '';
-            movies.forEach(movie => {
-                const imageUrl = `https://image.tmdb.org/t/p/original${movie.poster_path}`;
+                function displayResults(movies) {
+                    // Updated displayResults function...
+                    const resultsContainer = document.getElementById('results');
+                    resultsContainer.innerHTML = '';
+                    movies.forEach(movie => {
+                        const imageUrl = `https://image.tmdb.org/t/p/original${movie.poster_path}`;
 
-                const movieElement = document.createElement('div');
-                movieElement.className = 'movie';
+                        const movieElement = document.createElement('div');
+                        movieElement.className = 'movie';
 
-                movieElement.innerHTML = `
+                        movieElement.innerHTML = `
                 <div class="movie-card-container">
                     <div class="movie-card">
                         <div class="movie-card-front">
@@ -240,11 +329,11 @@
                         </div>
                     </div>
                 </div>`;
-                resultsContainer.appendChild(movieElement);
-            });
-        }
+                        resultsContainer.appendChild(movieElement);
+                    });
+                }
 
-    </script>
+            </script>
 </body>
 
 </html>
